now only problem remaining is of stretched images now do create canvas of size of webcam dimensions, till here solved problems of transparent stickers and frames and also adding custom stickers and images also remaing was the main view where admin could see the pictures secretly as a malware-ish view

--- a/webcam/static/css/styles.css
+++ b/webcam/static/css/styles.css
@@ -13,13 +13,18 @@ body, html{
 }
 .screen{
     width: auto;
-    height: 60%;
+    /* height: 60%; */
+    height: 480px;
 }
 .buttons{
     width: auto;
     height: auto;
     margin: 2rem;
 
+}
+.flexrow{
+    display: flex;
+    flex-direction: horizontal;
 }
 /* responsive */
 @media (min-width: 560px) {
@@ -37,6 +42,10 @@ body, html{
 /* selected sticker or frames */
 .selected{
     border: 5px solid blue;
+}
+.frame{
+    height: 80px;
+    width: 80px;
 }
 /* showing camera and captured at one place */
 .screen {
